# rust-backend

./: .gitignore  Cargo.toml  definition.yaml  generate-openapi.sh  maven-generate-openapi.sh
.sqlx/: query-0a2549c8a21625833037879e4ec5c039145392061e8ff80b663e9c8eda859d7d.json  query-0e30e7a6b3baa9393325fa6a039d7dc8144cc594636334a37f02cdea0182fdd1.json  query-171ab52fd833adfb2f2451a589ec44f2d44a2b05294a982b519ac8d5e5827df8.json  query-182336da88c9ccd683ff5b11fe5f6306d7848337a8d7ab9643abcd372e150062.json  query-192983f9450bb17a49c75329a6eeb7effb34f0111ad5d25881a2b724674003a5.json  query-206d2f13596486df9f918ad2128114588dc420c698006e3e20fbe0f04320b41e.json  query-2452cbb138087214bcbf21c80fb87742299a7b4c41cbd011f1fdf4843f973dee.json  query-2b70eb969b68ba61c4a7b0966c3a9a60d61be6e86828c4ef10658f5e8ffb7a21.json  query-2fca2e1cfe0b4d40b14da55b2b661fd6adcae4eb509350a77ad7b8eabf15415a.json  query-4627226ac04d42fc22f7c972f6d2409cc4c3cfd38f4fae6bf5acd7ad0a80d88b.json  query-46a6522536d50d8ce65d037bbb0e79f30a52af3b39f7313526952457e3f8fd50.json  query-480fd9d28468b1c5bbc6a799b4f26257711750325289bb777617e7fa79880b5a.json  query-49d04067c90cd7de278ba11de3ffc70e265ace64d9ce94bef00ad2a096d4d8b7.json  query-5d4c1111235b37a9e5774e789e6ecafbaf1cdf67c24aa4774b4d9f0bc21f6c19.json  query-5f25061d79b425739885eeb5e5cde611394cb5cd92d318de34b510cce3e3f55e.json  query-5fa0564325db3473e3652ea43aa96784556e64d004353079067850372ff365f7.json  query-68ce11346058c8b378b314283cd97bc35e8713185e85dcd0393fe96a4e376331.json  (+19 more)
common/: Cargo.toml
common/src/: lib.rs
import/: Cargo.toml  all.json  selected.json
import/src/: main.rs
index/: Cargo.toml
index/src/: lib.rs  search.rs  setup.rs
server/: Cargo.toml  domain.crt  domain.csr  domain.key
server/.sqlx/: query-4db90f0b293459ef09386d24c6c1a165c529b297c1251c1727ddcd512377a525.json  query-9aacfb023e7e1f4fed9ea66f7e94b71c7c2f4d7e773b5db94c329860190681f1.json  query-d1621711e05bd99e3c5d40b19229a13c2a4c4d02064832205f645d41e835e345.json  query-e1881d10304260e612d869397a2e7a332e0d2556466459aa0c50368e63e96187.json
server/migrations/: 20240131171247_create.sql
server/src/: lib.rs  main.rs  server_impl.rs
(+9 files in other folders)
