[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"
serde_derive = "1"

chrono = "0.4.33"
sqlx = { version = "0.7", features = ["runtime-tokio", "mysql", "chrono"] }
byteorder = "1.5.0"
