[package]
name = "import"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"
serde_derive = "1"
serde_dynamo = "4"
serde_json = "1"
chrono = "0"

tokio = { version = "1", default-features = false, features = [
  "rt-multi-thread",
] }
sqlx = { version = "0.7", features = ["runtime-tokio", "mysql", "chrono"] }
futures = "0.3.30"
