[package]
name = "index"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tantivy = "0.21.1"
tokio = { version = "1", default-features = false, features = [
  "rt-multi-thread",
] }
tracing = { version = "0.1", features = ["attributes"] }

common = { path = "../common" }
