[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
tokio = { version = "1", default-features = false, features = [
  "signal",
  "rt-multi-thread",
] }
axum = { version = "0.7" }
axum-extra = { version = "0.9", features = ["cookie", "multipart"] }
http = "1"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = { version = "0.1", features = ["attributes"] }

openapi = { path = "../openapi" }
async-session = "3"
oauth2 = "4"
anyhow = "1"
reqwest = { version = "0", features = ["json"] }
axum-server = { version = "0.6", features = ["tls-rustls"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "mysql", "chrono"] }
byteorder = "1.5.0"
tracing-subscriber = "0.3"
